--- a/.github/workflows/weekly-content.yml
+++ b/.github/workflows/weekly-content.yml
@@ -4,8 +4,8 @@ on:
   schedule:
     # 1. Topic Committee: Sunday at 00:00 UTC (9:00 AM KST)
     - cron: '0 0 * * 0'
-    # 2. Draft Writer: Monday at 00:00 UTC (9:00 AM KST)
-    - cron: '0 0 * * 1'
+    # 2. Draft Writer: Mon, Wed, Fri at 00:00 UTC (9:00 AM KST)
+    - cron: '0 0 * * 1,3,5'
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -39,8 +39,8 @@ jobs:
           git commit -m "chore(topic): weekly topic selection" || echo "No changes to commit"
           git push
 
-      - name: Run Draft Writer (Monday)
-        if: github.event.schedule == '0 0 * * 1' || github.event_name == 'workflow_dispatch'
+      - name: Run Draft Writer (Mon, Wed, Fri)
+        if: github.event.schedule == '0 0 * * 1,3,5' || github.event_name == 'workflow_dispatch'
         env:
           GITHUB_MODELS_TOKEN: ${{ secrets.MODELS_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
